--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   },
